--- a/.github/workflows/codeRiewson.yml
+++ b/.github/workflows/codeRiewson.yml
@@ -14,7 +14,15 @@ jobs:
         with:
           fetch-depth: 0  # Ensure the whole repo history is pulled
 
-      - name: Extract PR Content
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install jq
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Extract and Prepare PR Content
         run: |
           git fetch origin +refs/pull/${{ github.event.pull_request.number }}/merge
           git checkout FETCH_HEAD
@@ -26,20 +34,26 @@ jobs:
           done
           # Encode changes to base64 to ensure safe transmission
           encoded_changes=$(echo -n "$changes" | base64 -w 0)
-          echo "ENCODED_CHANGES=${encoded_changes}" >> $GITHUB_ENV
+          echo "ENCODED_CHANGES=$encoded_changes" >> $GITHUB_ENV
 
       - name: Call ChatGPT with PR content
         run: |
           # Decode base64 changes to normal text (for debugging or if needed)
           decoded_changes=$(echo "${{ env.ENCODED_CHANGES }}" | base64 --decode)
+
+          # Use jq to create JSON payload safely
+          json_payload=$(jq -n --arg content "$decoded_changes" '{
+            model: "gpt-4o-mini",
+            store: true,
+            messages: [
+              {role: "user", content: $content}
+            ]
+          }')
+
+          # Send request to OpenAI API
           response=$(curl -s https://api.openai.com/v1/chat/completions \
             -H "Content-Type: application/json" \
             -H "Authorization: Bearer ${{ secrets.OPENAI_API_KEY }}" \
-            -d '{
-                    "model": "gpt-4o-mini",
-                    "store": true,
-                    "messages": [
-                        {"role": "user", "content": "'"$decoded_changes"'"}
-                    ]
-                }')
+            -d "$json_payload")
+          
           echo "Response from ChatGPT: $response"
