--- a/.github/workflows/codeRiewson.yml
+++ b/.github/workflows/codeRiewson.yml
@@ -36,17 +36,18 @@ jobs:
           encoded_changes=$(echo -n "$changes" | base64 -w 0)
           echo "ENCODED_CHANGES=$encoded_changes" >> $GITHUB_ENV
 
-      - name: Call ChatGPT with PR content
+      - name: Call ChatGPT with PR content and request for code review
         run: |
           # Decode base64 changes to normal text (for debugging or if needed)
           decoded_changes=$(echo "${{ env.ENCODED_CHANGES }}" | base64 --decode)
 
           # Use jq to create JSON payload safely
-          json_payload=$(jq -n --arg content "$decoded_changes" '{
+          json_payload=$(jq -n --arg changes "$decoded_changes" --arg prompt "Faça um code review breve, apontando onde posso incluir melhorias.\nMudanças:\n$changes" '{
             model: "gpt-4o-mini",
             store: true,
             messages: [
-              {role: "user", content:faca um code review e aponte melhorias $content}
+              {role: "system", content: "Avalie o código abaixo e sugira melhorias."},
+              {role: "user", content: $prompt}
             ]
           }')
 
