--- a/.github/workflows/codeRiewson.yml
+++ b/.github/workflows/codeRiewson.yml
@@ -40,14 +40,13 @@ jobs:
         run: |
           # Decode base64 changes to normal text (for debugging or if needed)
           decoded_changes=$(echo "${{ env.ENCODED_CHANGES }}" | base64 --decode)
-        
+
           # Use jq to create JSON payload safely
-          json_payload=$(jq -n --arg changes "$decoded_changes" --arg prompt "Aqui estão as mudanças realizadas no código. Por favor, faça um code review breve, apontando onde posso incluir melhorias. \n\nMudanças:\n$changes" '{
+          json_payload=$(jq -n --arg content "$decoded_changes" '{
             model: "gpt-4o-mini",
             store: true,
             messages: [
-              {role: "system", content: "Avalie o código abaixo e sugira melhorias."},
-              {role: "user", content: $prompt}
+              {role: "user", content: $content}
             ]
           }')
 
@@ -56,5 +55,5 @@ jobs:
             -H "Content-Type: application/json" \
             -H "Authorization: Bearer ${{ secrets.OPENAI_API_KEY }}" \
             -d "$json_payload")
-        
+          
           echo "Response from ChatGPT: $response"
