--- a/.github/workflows/codeRiewson.yml
+++ b/.github/workflows/codeRiewson.yml
@@ -58,3 +58,19 @@ jobs:
             -d "$json_payload")
           
           echo "Response from ChatGPT: $response"
+
+      - name: Post response to GitHub PR
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # Extract the output text from the ChatGPT response
+          output=$(echo "$response" | jq -r '.choices[0].text')
+          
+          # Post the response as a comment to the PR
+          comment_body=$(jq -n --arg body "$output" '{"body": $body}')
+          curl -s -H "Authorization: token $GITHUB_TOKEN" \
+               -H "Content-Type: application/json" \
+               -X POST \
+               -d "$comment_body" \
+               "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
+
