--- a/.github/workflows/codeRiewson.yml
+++ b/.github/workflows/codeRiewson.yml
@@ -60,17 +60,24 @@ jobs:
           echo "Response from ChatGPT: $response"
 
       - name: Post response to GitHub PR
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Extract the output text from the ChatGPT response
-          output=$(echo "$response" | jq -r '.choices[0].text')
-          
-          # Post the response as a comment to the PR
-          comment_body=$(jq -n --arg body "$output" '{"body": $body}')
-          curl -s -H "Authorization: token $GITHUB_TOKEN" \
-               -H "Content-Type: application/json" \
-               -X POST \
-               -d "$comment_body" \
-               "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
-
+            # Extrair o texto da resposta do ChatGPT
+            output=$(echo "$response" | jq -r '.choices[0].text')
+      
+            # Construir o corpo do comentário
+            comment_body=$(jq -n --arg body "$output" '{"body": $body}')
+            
+            # Postar o comentário na Pull Request usando GH_PAT
+            response=$(curl -s -w "HTTP_STATUS:%{http_code}" -H "Authorization: token ${{ secrets.GH_PAT }}" \
+                 -H "Content-Type: application/json" \
+                 -X POST \
+                 -d "$comment_body" \
+                 "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments")
+            
+            echo "$response"
+            if [[ "$response" == *"HTTP_STATUS:403"* ]]; then
+              echo "Failed to post comment due to permissions or other restrictions."
+            fi
+        env:
+            GH_PAT: ${{ secrets.GH_PAT }}
+      
