--- a/.github/workflows/codeRiewson.yml
+++ b/.github/workflows/codeRiewson.yml
@@ -32,16 +32,12 @@ jobs:
             diff=$(git diff ${{ github.event.pull_request.base.sha }} HEAD -- $file)
             changes+="${file}:\n${diff}\n"
           done
-          # Encode changes to base64 to ensure safe transmission
           encoded_changes=$(echo -n "$changes" | base64 -w 0)
           echo "ENCODED_CHANGES=$encoded_changes" >> $GITHUB_ENV
 
       - name: Call ChatGPT with PR content
         run: |
-          # Decode base64 changes to normal text (for debugging or if needed)
           decoded_changes=$(echo "${{ env.ENCODED_CHANGES }}" | base64 --decode)
-
-          # Use jq to create JSON payload safely
           json_payload=$(jq -n --arg content "$decoded_changes" --arg additionalMessage "Faca um code review, seja breve a aponte os pontos de melhoria em portugues" '{
             model: "gpt-4o-mini",
             store: true,
@@ -50,38 +46,17 @@ jobs:
               {role: "user", content: $content}
             ]
           }')
-
-          # Send request to OpenAI API
           response=$(curl -s https://api.openai.com/v1/chat/completions \
             -H "Content-Type: application/json" \
             -H "Authorization: Bearer ${{ secrets.OPENAI_API_KEY }}" \
             -d "$json_payload")
-          
-          echo "Response from ChatGPT: $response"
+          response_content=$(echo "$response" | jq -r '.choices[0].message.content')
+          echo "CHOSEN_RESPONSE=$response_content" >> $GITHUB_ENV
 
-      - name: Verify and adjust the format of $response
+      - name: Post Comment on PR
         run: |
-            echo "Original Response: $response"
-      
-            # Verify and adjust the format of $response to ensure it contains the 'body' field
-            corrected_response=$(echo "$response" | jq -c '. | if type=="object" and has("body") then . else {body: .} end')
-            echo "Corrected Response: $corrected_response"
-            
-            # Post the comment to the Pull Request using GH_PAT
-            final_response=$(curl -s -w "HTTP_STATUS:%{http_code}" -H "Authorization: token ${{ secrets.GH_PAT }}" \
-                 -H "Content-Type: application/json" \
-                 -X POST \
-                 -d "$corrected_response" \
-                 "https://api.github.com/repos/DiegoDeSousaPereira/testCodeReviewson/issues/2/comments")
-      
-            echo "$final_response"
-            if [[ "$final_response" == *"HTTP_STATUS:403"* || "$final_response" == *"HTTP_STATUS:422"* ]]; then
-              echo "Failed to post comment due to permissions or other restrictions."
-            fi
-        shell: /usr/bin/bash -e {0}
-        env:
-         GH_PAT: ${{ secrets.GH_PAT }}
-      
-      
-      
-      
+          curl -s \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            -d '{"body": "Response from ChatGPT: ${{ env.CHOSEN_RESPONSE }}"}' \
+            "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
