--- a/.github/workflows/codeRiewson.yml
+++ b/.github/workflows/codeRiewson.yml
@@ -32,12 +32,16 @@ jobs:
             diff=$(git diff ${{ github.event.pull_request.base.sha }} HEAD -- $file)
             changes+="${file}:\n${diff}\n"
           done
+          # Encode changes to base64 to ensure safe transmission
           encoded_changes=$(echo -n "$changes" | base64 -w 0)
           echo "ENCODED_CHANGES=$encoded_changes" >> $GITHUB_ENV
 
       - name: Call ChatGPT with PR content
         run: |
+          # Decode base64 changes to normal text (for debugging or if needed)
           decoded_changes=$(echo "${{ env.ENCODED_CHANGES }}" | base64 --decode)
+
+          # Use jq to create JSON payload safely
           json_payload=$(jq -n --arg content "$decoded_changes" --arg additionalMessage "Faca um code review, seja breve a aponte os pontos de melhoria em portugues" '{
             model: "gpt-4o-mini",
             store: true,
@@ -46,17 +50,27 @@ jobs:
               {role: "user", content: $content}
             ]
           }')
+
+          # Send request to OpenAI API
           response=$(curl -s https://api.openai.com/v1/chat/completions \
             -H "Content-Type: application/json" \
             -H "Authorization: Bearer ${{ secrets.OPENAI_API_KEY }}" \
             -d "$json_payload")
+          
+          echo "Response from ChatGPT: $response"
           response_content=$(echo "$response" | jq -r '.choices[0].message.content')
           echo "CHOSEN_RESPONSE=$response_content" >> $GITHUB_ENV
 
       - name: Post Comment on PR
         run: |
-          curl -s \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            -d '{"body": "Response from ChatGPT: ${{ env.CHOSEN_RESPONSE }}"}' \
-            "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
+            curl -s \
+              -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Accept: application/vnd.github.v3+json" \
+              -d '{"body": "Response from ChatGPT: ${{ env.CHOSEN_RESPONSE }}"}' \
+              "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
+          
+
+      
+      
+      
+      
