--- a/.github/workflows/codeRiewson.yml
+++ b/.github/workflows/codeRiewson.yml
@@ -38,39 +38,27 @@ jobs:
 
       - name: Call ChatGPT with PR content
         run: |
-          # Decode base64 changes to normal text (for debugging or if needed)
-          decoded_changes=$(echo "${{ env.ENCODED_CHANGES }}" | base64 --decode)
-
-          # Use jq to create JSON payload safely
-          json_payload=$(jq -n --arg content "$decoded_changes" --arg additionalMessage "Faca um code review, seja breve a aponte os pontos de melhoria em portugues" '{
-            model: "gpt-4o-mini",
-            store: true,
-            messages: [
-              {role: "user", content: $additionalMessage},
-              {role: "user", content: $content}
-            ]
-          }')
-
-          # Send request to OpenAI API
-          response=$(curl -s https://api.openai.com/v1/chat/completions \
-            -H "Content-Type: application/json" \
-            -H "Authorization: Bearer ${{ secrets.OPENAI_API_KEY }}" \
-            -d "$json_payload")
-          
-          echo "Response from ChatGPT: $response"
-          response_content=$(echo "$response" | jq -r '.choices[0].message.content')
-          echo "CHOSEN_RESPONSE=$response_content" >> $GITHUB_ENV
-
+            decoded_changes=$(echo "${{ env.ENCODED_CHANGES }}" | base64 --decode)
+            json_payload=$(jq -n --arg content "$decoded_changes" --arg additionalMessage "Faça um code review, seja breve e aponte os pontos de melhoria em português" '{
+              model: "gpt-4o-mini",
+              store: true,
+              messages: [
+                {role: "user", content: $additionalMessage},
+                {role: "user", content: $content}
+              ]
+            }')
+            response=$(curl -s https://api.openai.com/v1/chat/completions \
+              -H "Content-Type: application/json" \
+              -H "Authorization: Bearer ${{ secrets.OPENAI_API_KEY }}" \
+              -d "$json_payload")
+            response_content=$(echo "$response" | jq -r '.choices[0].message.content')
+            echo "CHOSEN_RESPONSE=$response_content" >> $GITHUB_ENV
+  
       - name: Post Comment on PR
         run: |
             curl -s \
               -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
               -H "Accept: application/vnd.github.v3+json" \
-              -d '{"body": "Response from ChatGPT: ${{ env.CHOSEN_RESPONSE }}"}' \
+              -d '{"body": "${{ env.CHOSEN_RESPONSE }}"}' \
               "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
-          
-
-      
-      
-      
-      
+  
