--- a/.github/workflows/codeRiewson.yml
+++ b/.github/workflows/codeRiewson.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Post Comment on PR
         run: |
             curl -s \
-              -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Authorization: token ${{ secrets.GH_PAT }}" \
               -H "Accept: application/vnd.github.v3+json" \
               -d '{"body": "teste"}' \
               "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
