--- a/.github/workflows/codeRiewson.yml
+++ b/.github/workflows/codeRiewson.yml
@@ -57,10 +57,9 @@ jobs:
               -H "Authorization: Bearer ${{ secrets.OPENAI_API_KEY }}" \
               -d "$json_payload")
             
-            # echo "Response from ChatGPT: $response"
+            # Extract the 'content' field from the response
+            content=$(echo $response | jq -r '.choices[0].message.content')
 
-            curl -s \
-              -H "Authorization: token ${{ secrets.GH_PAT }}" \
-              -H "Accept: application/vnd.github.v3+json" \
-              -d "{\"body\": \"$response\"}" \
-              "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
+            # Echo the 'content' field
+            echo "Content from ChatGPT: $content"
+          
