--- a/.github/workflows/codeRiewson.yml
+++ b/.github/workflows/codeRiewson.yml
@@ -42,7 +42,7 @@ jobs:
             decoded_changes=$(echo "${{ env.ENCODED_CHANGES }}" | base64 --decode)
   
             # Use jq to create JSON payload safely
-            json_payload=$(jq -n --arg content "$decoded_changes" --arg additionalMessage "Voce é um desenvolvedor senior e esta analisando uma pull request, validando se o codigo tem uma má pratica, caso tenham informe a linha, codigo que tem a má pratica e uma possivel solução" '{
+            json_payload=$(jq -n --arg content "$decoded_changes" --arg additionalMessage "Voce é um desenvolvedor senior e esta analisando uma pull request, validando se o codigo tem uma más pratica, caso tenham informe os codigos que tenham as más pratica e uma possivel solução" '{
               model: "gpt-4o-mini",
               store: true,
               messages: [
